--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
-    <title>Surya Rayarao - Full Stack Developer</title>
+    <title>Julia Duncan - Full Stack Developer</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,7 +32,7 @@
         <div class="sidebar-wrapper">
             <div class="profile-container">
                 <img class="profile" src="assets/images/profile.png" alt="" />
-                <h1 class="name">Surya Rayarao</h1>
+                <h1 class="name">Julia Duncan</h1>
 		<h3 class="tagline">Full Stack Developer</h3>
             </div><!--//profile-container-->
             
