--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="assets/images/images.png" alt="" />
+                <img class="profile" src="assets/images/106569382-Live Original Watercolor Plaque White Pink 7 x 6 -1.jpg" alt="" />
                 <h1 class="name">Julia Duncan</h1>
 		<h3 class="tagline">Full Stack Developer</h3>
             </div><!--//profile-container-->
