--- a/index.html
+++ b/index.html
@@ -41,17 +41,25 @@
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: yourname@email.com">jad667@mail.missouri.edu</a></li>
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">573 239 8461</a></li>
                     <li class="website"><i class="fa fa-globe"></i><a href="http://www.juliaaduncan.com/" target="_blank">juliaaduncan.com</a></li>
-                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/</a></li>
+                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/jaduncan704</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="#" target="_blank">github.com/julia-duncan</a></li>
                 </ul>
             </div><!--//contact-container-->
             
-		<div class="education-container container-block">
+	    <div class="education-container container-block">
                 <h2 class="container-block-title">Education</h2>
                 <div class="item">
                     <h4 class="degree">Bachelor of Science in Computer Science</h4>
                     <h5 class="meta">University of Missouri</h5>
                     <div class="time">Degree earned 2015</div>
+                </div><!--//item-->
+		<div class="item">
+                    <h5 class="meta">Moberly Area Community College</h5>
+                    <div class="time">9 credit hours</div>
+                </div><!--//item-->
+		<div class="item">
+                    <h5 class="meta">Central Methodist University</h5>
+                    <div class="time">12 credit hours</div>
                 </div><!--//item-->
             </div><!--//education-container-->
             
